# mev-wiki

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
codebases/BaseBuster/: .gitignore  .gitmodules  Cargo.toml  README.md
codebases/BaseBuster/contracts/: foundry.toml
codebases/BaseBuster/contracts/broadcast/DeployQuoter.s.sol/8453/: run-1726184831.json  run-1726184869.json
codebases/BaseBuster/contracts/broadcast/DeployScript.s.sol/8453/: run-1726016822.json  run-1726020266.json  run-1726020734.json  run-1726020868.json  run-1726095505.json  run-1726095572.json  run-1726096841.json  run-1726098575.json  run-latest.json
codebases/BaseBuster/contracts/script/: DeployQuoter.s.sol  DeployScript.s.sol
codebases/BaseBuster/contracts/src/: FlashQuoter.sol  FlashSwap.sol
codebases/BaseBuster/src/: bytecode.rs  cache.rs  estimator.rs  events.rs  filter.rs  gas_station.rs  gen.rs  graph.rs  history_db.rs  ignition.rs  main.rs  market_state.rs  quoter.rs  searcher.rs  simulator.rs  stream.rs  swap.rs  tracing.rs  tx_sender.rs
codebases/BaseBuster/src/abi/: FlashQuoter.json  FlashSwap.json
codebases/BaseBuster/src/calculation/: aerodrome.rs  balancer.rs  calculator.rs  curve.rs  maverick.rs  mod.rs  uniswap.rs
codebases/BaseBuster/src/state_db/: blockstate_db.rs  mod.rs  v2_db.rs  v3_db.rs
codebases/BaseBuster/src/tests/: mod.rs  test_estimation.rs  test_quotes.rs
codebases/BaseBuster/src/tests/helpers/: contract_gen.rs  mod.rs  offchain_quote.rs  onchain_quote.rs  state.rs  test_utils.rs
codebases/NodeDB/: Cargo.toml
codebases/NodeDB/example/: approval.rs  approval_async.rs  custom_account.rs  custom_slot.rs  quote.rs  swap.rs  swap_async.rs
codebases/hevm/: CHANGELOG.md  cabal.project  flake.nix  hevm.cabal
docs/: A Tale of Two Arbitrages.md  A new game in town.md  An Automated Market Maker Minimizing Loss-Versus-Rebalancing.md  Articles.md  Avoiding Trap Tokens With eth_call.md  Defi_Mochi.md  Escaping the Dark Forest.md  Ethereum Blockspace - Who Gets What and Why.md  Ethereum is a Dark Forest.md  First key to building MEV bots - The simulation engine.md  Flash Boys 2.0 - Frontrunning, Transaction Reordering, and Consensus Instability in Decentralized Exchanges.md  Flashbots - Frontrunning the MEV Crisis.md  Frontrunner Jones and the Raiders of the Dark Forest - An Empirical Study of Frontrunning on the Ethereum Blockchain.md  High-Frequency Trading on Decentralized On-Chain Exchanges.md  How I've built an unprofitable Crypto MEV Bot in Rust.md  Implementing Ethereum trading front-runs on the Bancor exchange in Python.md  MEV - Maximal Extractable Value Pt. 1.md  MEV - Maximal Extractable Value Pt. 2.md  MEV Markets Part 1 - Proof of Work.md  MEV Markets Part 2 - Proof of Stake.md  MEV Markets Part 3 - Payment for Order Flow.md  MEV Wiki.md  MEV capturing AMM (McAMM).md  MEV-Share - programmably private orderflow to share MEV with users.md  Order flow, auctions and centralisation I - a warning.md  Order flow, auctions and centralisation II - order flow auctions.md  Quantifying Blockchain Extractable Value - How dark is the forest?.md  The MEV Supply Chain - a peek into the future of this industry.md  The Orderflow Auction Design Space.md  The fastest draw on the Blockchain - Ethereum Backrunning.md  There is Light in the Dark Forest.md  Understanding Automated Market-Makers, Part 1 - Price Impact.md  Unity is Strength - A Formalization of Cross-Domain Maximal Extractable Value.md  Usage of Markout to Calculate LP Profitability in Uniswap V3.md  What Is Maximal Extractable Value (MEV)?.md  What Is the National Best Bid and Offer (NBBO)? How Quote Works.md  Wrecking sandwich traders for fun and profit.md
docs/Solid Quant/: 1. I decided to build my own MEV bot. Here’s how I’m doing it..md  10. MEV templates written in Python, Javascript, and Rust.md  12. How fast is your MEV bot? Comparing Javascript or Python or Rust.md  13. REVM Is All You Need.md  14. I don’t care if I get sandwiched, bigger things are coming to MEV.md  15. 100 hours of building a sandwich bot.md  16. Let’s see if our sandwich bot really works.md  17. Adding stablecoin sandwiches and group bundling to improve our sandwich bot.md  2. First key to building MEV bots - The simulation engine.md  3. Clone coding popular MEV bot projects.md  4.What I learned after a month of intensive MEV bot study.md  5.How to use Yul in your MEV project.md  6. How I built my first DEX arbitrage bot - Introducing Whack-A-Mole.md  7. How I spend my days Mempool watching (Part 1)- Transaction Prediction through EVM Tracing.md  8. Using REVM to build a sandwich bot.md  9. The MEV roadmap everyone’s been waiting for.md
mev-bot/: Cargo.toml  README.md
mev-bot/contracts/: .gitmodules  Makefile  SandwichBot.huff  foundry.toml
mev-bot/contracts/src/: SandwichBot.huff
mev-bot/contracts/test/: Encoding.t.sol  SandwichBot.t.sol
mev-bot/contracts/test/misc/: Encoding.sol  Interfaces.sol  V2Helper.sol
mev-bot/crates/flashbots-executor/: Cargo.toml
mev-bot/crates/flashbots-executor/src/: bundle.rs  lib.rs  relay.rs  signer.rs
mev-bot/crates/simulate-engine/: Cargo.toml
mev-bot/crates/simulate-engine/src/: backend.rs  block_stream.rs  calldata_builder.rs  db.rs  engine.rs  error.rs  executor.rs  huff_calldata.rs  lib.rs  mempool.rs  pool_loader.rs  pool_state.rs  profit_calculator.rs  token_index.rs  types.rs
(+55 files in other folders)
