[package]
name = "BaseBuster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[features]
verification = []

[dependencies]
alloy = { version = "0.6.4", features = ["full", "node-bindings", "providers", "rpc-client", "rpc-client-ipc", "rpc-types-debug", "rpc-types-trace", "eips"] }
anyhow = "1.0.89"
env_logger = "0.11.5"
futures = { version = "0.3.31", features = ["executor"] }
pool-sync = { path = "../PoolSync" }
node-db = { path = "../NodeDB"}
log = "0.4.22"
petgraph = "0.6.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha2 = "0.10.8"
dashmap = "6.1.0"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
uniswap_v3_math = "0.5.2" 
dotenv = "0.15.0"
reqwest = "0.12.8"
zerocopy = "0.8.6"
rustc-hash = "2.0.0"
alloy-eips = "0.4.2"
chrono = "0.4.38"
hyper = { version = "1.5.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1.2"
bytes = "1.8.0"
foldhash = "0.1.3"
eyre = "0.6.12"
revm-inspectors = "0.12.0"
revm = { version = "18.0.0", features = ["alloydb"] }
revm-database = { path = "../revm/crates/database", features = ["alloydb"] }
reth = {git = "https://github.com/paradigmxyz/reth"}
reth-db = {git = "https://github.com/paradigmxyz/reth", package = "reth-db"}
reth-chainspec = {git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec"}
reth-node-ethereum = {git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum"}


